# QuadBool

./: CMakeLists.txt  main.cpp  run.sh
cmake/: FindGMP.cmake
inc/CSG/: csg.h
inc/TEST/: testcase.h
inc/lange/: AABB.h  Global.h  Hybrid.h  PSUtils.h  TQSI.h  Visualization.h  boolean.h
inc/libqi/: qi.h  qi_io.h  qi_kernel.h
inc/libqi/io/: QIAnsicolors.h  QIComponentLabels.h  QIConsoleWriter.h  QIHTMLWriter.h  QIOutput.h  QIOutputter.h  QIParser.h  QIPolynomialParser.h  QIWriter.h
inc/libqi/kernel/: QIBench.h  QICheck.h  QIComponentTypes.h  QIElem.h  QIGlobal.h  QIHompoly.h  QIInter.h  QIInterWith22.h  QILegendre.h  QINoMult.h  QINumber.h  QIOneMult.h  QIParam.h  QIParamStruct.h  QIQsicStruct.h  QISolve.h  QITwoMult.h  QIUspensky.h  QIVanishDet.h
inc/libqi/rpl/: base_matrix.h  base_vector.h  bigfloat.h  bigint.h  bigint_matrix.h  math_matrix.h  math_vector.h  polynomial.h  rational_factorization.h  rpl.h
inc/qi/: parse_args.h  settings.h  shell.h
src/: CMakeLists.txt
src/CSG/: csg.cpp
src/TEST/: example.json  testcase.cpp
src/lange/: Hybrid.cpp  TQSI.cpp  Visualization.cpp  boolean.cpp
src/libqi/: CMakeLists.txt  qi.cpp
src/libqi/io/: QIComponentLabels.c  QIConsoleWriter.cc  QIOutputter.cc  QIParser.cc  QIPolynomialParser.cc  QIWriter.cc  monomial_mapping.txt
src/libqi/kernel/: QIBench.cc  QICheck.cc  QIElem.cc  QIInter.cc  QIInterWith22.cc  QILegendre.cc  QINoMult.cc  QINumber.cc  QIOneMult.cc  QIParam.cc  QISolve.cc  QITwoMult.cc  QIVanishDet.cc
src/libqi/rpl/lib/: CMakeLists.txt  bigfloat.cpp  bigint.cpp  bigint_matrix.cpp  polynomial.cpp  rational_factorization.cpp
src/libqi/rpl/tests/: CMakeLists.txt  test_bigfloat.cpp  test_bigint.cpp  test_bigint_matrix.cpp  test_poly.cpp  test_rational_factorization.cpp
src/qi/: CMakeLists.txt  HELP  debilos.sh  main.cc  parse_args.cc  pick.sed  pick.sh  quadrics.txt  rangetest.sh  s2.qi  settings.cc  shell.cc  source_bench.qi  source_example.qi
